# BacktestingEngine

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  readme.txt
Indicators/: SMA.h
data/: BTC-USD.csv
include/: Backtest.h  Candle.h  Data.h  MovingAverageStrategy.h  Signal.h  Strategy.h
include/Indicators/: EMA.h  MACD.h  RSI.h  SMA.h  Stoch.h
include/Strategies/: EMA_RSI.h
src/: Backtest.cpp  Data.cpp  EMA.cpp  EMA_RSI.cpp  MACD.cpp  MovingAverageStrategy.cpp  RSI.cpp  SMA.cpp  SimpleMovingAverage.cpp  Stoch.cpp
